# article-classification-and-recommendation

./: .gitignore  README.md  filter_top_categories.py  json_to_parquet_converter.py  main.py  pyproject.toml  test.py  train.py
data_preprocessing/: sample_categories.py
report/: main.tex  references.bib
src/: classifier.py  data_loader.py  pipeline.py  recommender.py
visualizations/: fig1_system_architecture.py  fig2_category_distribution.py  fig3_title_length.py  fig4_data_split.py  fig4_pipeline_diagram.py  fig5_training_curves.py  fig6_confusion_matrix.py  fig7_per_class_metrics.py  fig8_recommendation_scores.py  generate_all.py
