[project]
name = "article-classification-recommendation"
version = "0.1.0"
description = "arXiv article classification and recommendation using DistilBERT and sentence-transformers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "numpy>=2.0.0",
    "torch>=2.3.0",
    "transformers>=4.40.0",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "tqdm>=4.66.0",
]
